# cqu_timetable_new

./: QTGUI.py  config.txt  main.py  pyproject.toml  readme.md  requirements-QTGUI.txt  requirements.txt  setup.py
.github/workflows/: python-publish.yml
cqu_timetable_new/: QTGUI.py  __init__.py  __main__.py  config.txt  layout.py  tkgui.py
cqu_timetable_new/layout/: mainWindow.ui
cqu_timetable_new/universalAuthLogin/: AES.py  __init__.py  readme.md  universalAuthLogin.py  utils.py
layout/: mainWindow.ui
tests/: test_empty_property.py  test_split_time.py  test_timezone.py
tests/test_split_time/: expect.ics
