[tool.poetry]
name = "cqu_timetable_new"
version = "0.3.2.10.2"
description = "Generate CQU timetable iCalendar (ics) file"
authors = ["weearc <qby19981121@gmail.com>"]
license = "AGPL-3.0-only"
readme = "readme.md"
repository = "https://github.com/weearc/cqu_timetable_new"
keywords = ["ics", "cqu", "icalendar", "timetable"]
include = ["readme.md"]

[tool.poetry.dependencies]
python = "^3.8"
icalendar = "^4.0.7"
openpyxl = "^3.0.6"
easygui = {version = "^0.98.2", optional = true}
pyside2 = {version = "^5.15.2", optional = true}

[tool.poetry.extras]
tk = ['easygui']
pyqt = ['pyside2']

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/weearc/cqu_timetable_new/issues"

[tool.poetry.scripts]
cqu_timetable_new = "cqu_timetable_new:main"
cqu_timetable_new-tk = "cqu_timetable_new.tkgui:main"
cqu_timetable_new-qt = "cqu_timetable_new.QTGUI:main"

[tool.poetry.dev-dependencies]
pytest-datadir = "^1.3.1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
